force-app/main/default/objects/CRMC_PP__ActionGrid_Requestee__c/CRMC_PP__ActionGrid_Requestee__c.object-meta.xml
<CustomObject>
    <label>Conga Grid Requestee</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Conga Grid Requestee Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Conga Grid Requestees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>