force-app/main/default/objects/CRMC_PP__ActionGrid_Requestee__c/fields/CRMC_PP__ActionGrid_Request__c.field-meta.xml
<CustomField>
    <fullName>CRMC_PP__ActionGrid_Request__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup to Conga Grid Request.</description>
    <label>Conga Grid Request</label>
    <referenceTo>CRMC_PP__ActionGrid_Request__c</referenceTo>
    <relationshipLabel>Conga Grid Requestees</relationshipLabel>
    <relationshipName>ActionGrid_Requestees</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>