force-app/main/default/objects/CRMC_PP__ActionGrid_Requestee__c/fields/CRMC_PP__RequesteeId__c.field-meta.xml
<CustomField>
    <fullName>CRMC_PP__RequesteeId__c</fullName>
    <description>User or group id text.</description>
    <label>RequesteeId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>