force-app/main/default/objects/CRMC_PP__ActionGrid_Requestee__c/fields/CRMC_PP__Type__c.field-meta.xml
<CustomField>
    <fullName>CRMC_PP__Type__c</fullName>
    <description>User or Group.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>User</fullName>
            </value>
            <value>
                <fullName>Group</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>